Add popup markup and js

--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="popup.css">
 </head>
 <body>
-    <h1 id="title"></h1>
-    <script src="popup.js"></script>
+    <div class="wrapper">
+        <h1>Contacts</h1>
+
+        <ul id="contacts" class="contacts"></ul>
+    
+        <script src="popup.js"></script>
+    </div>
 </body>
 </html>
